--- a/index.css
+++ b/index.css
@@ -10,6 +10,151 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+ .contact-btn {
+  text-align: center;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 0.75rem 1.9rem;
+  border-radius: 15px;
+  text-transform: uppercase;
+  font-size: 17px;
+  /* font-family: "Raleway", sans-serif; */
+  transition: 0.3s;
+  background-color: #155D27;
+  color: white;
+  /* margin-top: 5%; */
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 550;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.contact-btn:hover {
+  background-color: white;
+  color: #155D27;
+}
+
+ #headshot {
+   border-radius: 30%;
+   width: 50%;
+   text-align: center;
+ }
+
+ #who {
+   font-weight: bold;
+   font-size: 75%;
+ }
+ .tipscreen {
+   width: 40%;
+   margin-left: 0%;
+ }
+ 
+ #goal-title {
+  color: #155D27;
+   position: center;
+   font-size: 36px;
+   letter-spacing: 1px;
+ }
+
+
+ .float-container {
+  padding: 20px;
+}
+
+#up-arrow {
+  height: 65px;
+  font-size: 55px;
+  color: #2DC653;
+}
+
+.goal {
+  padding-top: 10px;
+}
+.icon {
+  color: #2DC653;
+  font-size:55px;
+  height: 65px;
+}
+
+#testimonials {
+  color: #10451D;
+}
+
+.goal-text {
+  font-size: 21px;
+  color: #155D27;
+}
+
+.float-child {
+  font-size: 20px;
+  font-weight: semi bold;
+  width: 50%;
+  float: left;
+  padding: 20px;
+}  
+
+.div1 {
+  text-align: center;
+}
+
+.div2 {
+  text-align: center;
+}
+
+ .coming-soon {
+  white-space: nowrap;
+  overflow: hidden;
+  /* width: 30em; */
+  animation: type 3.5s steps(60, end);
+
+
+      font-size: 27px;
+      color: #10451D;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+ }
+ @keyframes type {
+  from {
+      width: 0%;
+  }
+  to {
+      width: 100%;
+  }
+}
+
+
+ .homepage {
+     background-color: #B7EFC5;
+ }
+
+ #goal-list {
+   color: #2DC653;
+ }
+
+ .nav-tag {
+    text-align: center;
+    display: inline-block;
+    padding: 0.75rem 1.9rem;
+    border-radius: 15px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    /* font-size: 15px; */
+    font-family: "Raleway", sans-serif;
+    transition: 0.3s;
+    background-color: #155D27;
+    color: white;
+    font-weight: Semi bold;
+    text-decoration: none;
+    font-size: 90%;
+ }
+
+ #logo {
+     position: left;
+     width: 150%;
+ }
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -235,11 +380,11 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: #2DC653;
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: #2DC653;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -489,7 +634,8 @@ progress {
 
 .lead {
   font-size: 1.25rem;
-  font-weight: 300;
+  letter-spacing: .8px;
+  font-weight: 400;
 }
 
 .display-1 {
@@ -666,13 +812,13 @@ progress {
   }
 }
 .row {
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
+  /* --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;*/
   display: flex;
   flex-wrap: wrap;
-  margin-top: calc(-1 * var(--bs-gutter-y));
+  /*margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
-  margin-left: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x)); */
 }
 .row > * {
   flex-shrink: 0;
@@ -1602,12 +1748,12 @@ progress {
 
   .col-xl-6 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 60%;
   }
 
   .col-xl-7 {
     flex: 0 0 auto;
-    width: 58.33333333%;
+    width: 61.33333333%;
   }
 
   .col-xl-8 {
@@ -2557,7 +2703,7 @@ textarea.form-control-lg {
   margin-right: 1rem;
 }
 
-.btn-check {
+.tn-outlinheck {
   position: absolute;
   clip: rect(0, 0, 0, 0);
   pointer-events: none;
@@ -2993,7 +3139,9 @@ textarea.form-control-lg {
 
 .btn {
   display: inline-block;
-  font-weight: 400;
+  width: 200px;
+  height: 90px;
+  font-weight: 550;
   line-height: 1.5;
   color: #212529;
   text-align: center;
@@ -3005,9 +3153,9 @@ textarea.form-control-lg {
       -ms-user-select: none;
           user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 3px solid transparent;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -3419,13 +3567,13 @@ textarea.form-control-lg {
 }
 
 .btn-outline-light {
-  color: #f8f9fa;
-  border-color: #f8f9fa;
+  color: #155D27;
+  border-color: #155D27;
 }
 .btn-outline-light:hover {
-  color: #000;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  color: #10451D;
+  background-color: #fff;
+  border-color: #fff;
 }
 .btn-check:focus + .btn-outline-light, .btn-outline-light:focus {
   box-shadow: 0 0 0 0.25rem rgba(248, 249, 250, 0.5);
@@ -3940,12 +4088,25 @@ textarea.form-control-lg {
 }
 
 .nav-link {
-  display: block;
-  padding: 0.5rem 1rem;
-  color: #0d6efd;
-  text-decoration: none;
+  text-align: center;
+    /* display: inline-block; */
+    /* padding: 0.75rem 1.9rem; */
+    border-radius: 15px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    /* font-size: 15px; */
+    /* font-family: "Raleway", sans-serif; */
+    transition: 0.3s;
+    /* background-color: #155D27; */
+    color: #155D27;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 90%;
+    font-family: var(--bs-font-sans-serif);
+    letter-spacing: 0.5px;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
+
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
     transition: none;
@@ -3976,12 +4137,12 @@ textarea.form-control-lg {
 }
 .nav-tabs .nav-link.disabled {
   color: #6c757d;
-  background-color: transparent;
+  /* background-color: transparent; */
   border-color: transparent;
 }
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #495057;
+  color: black;
   background-color: #fff;
   border-color: #dee2e6 #dee2e6 #fff;
 }
@@ -4086,8 +4247,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
-  background-color: transparent;
-  border: 1px solid transparent;
+  background-color: #155D27;
+  border: 1px #155D27;
   border-radius: 0.25rem;
   transition: box-shadow 0.15s ease-in-out;
 }
@@ -4113,6 +4274,7 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
+
 }
 
 .navbar-nav-scroll {
@@ -4496,7 +4658,7 @@ textarea.form-control-lg {
   border-color: rgba(255, 255, 255, 0.1);
 }
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 .navbar-dark .navbar-text {
   color: rgba(255, 255, 255, 0.55);
@@ -4509,7 +4671,9 @@ textarea.form-control-lg {
 
 .card {
   position: relative;
+  margin:auto;
   display: flex;
+  align-items: center;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
@@ -4541,9 +4705,16 @@ textarea.form-control-lg {
   border-top: 0;
 }
 
+#mission {
+  color: #10451D;
+  font-size: 19px;
+}
+
 .card-body {
+  color: #10451D;
   flex: 1 1 auto;
   padding: 1rem 1rem;
+  align-items: center;
 }
 
 .card-title {
@@ -6612,7 +6783,7 @@ textarea.form-control-lg {
 }
 
 .stretched-link::after {
-  position: absolute;
+  /* position: absoluute; */
   top: 0;
   right: 0;
   bottom: 0;
@@ -7645,6 +7816,7 @@ textarea.form-control-lg {
 
 .fw-bolder {
   font-weight: bolder !important;
+  font-size: 30px;
 }
 
 .lh-1 {
@@ -7761,7 +7933,7 @@ textarea.form-control-lg {
 
 .text-white {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+  color: #208B3A;
 }
 
 .text-body {
@@ -7781,7 +7953,7 @@ textarea.form-control-lg {
 
 .text-white-50 {
   --bs-text-opacity: 1;
-  color: rgba(255, 255, 255, 0.5) !important;
+  color: #155D27;
 }
 
 .text-reset {
@@ -7807,7 +7979,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: #B7EFC5 !important;
 }
 
 .bg-secondary {
@@ -7842,7 +8014,7 @@ textarea.form-control-lg {
 
 .bg-dark {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+  background-color: white;
 }
 
 .bg-black {
